# Enso

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: delete.rs  devtools.rs  duplicates.rs  mod.rs  query.rs  scan.rs  steam.rs  trash_list.rs
src-tauri/src/index/: mod.rs  stats.rs
src-tauri/src/scanner/: categories.rs  mod.rs  progress.rs  walker.rs
src-tauri/src/trash/: freedesktop.rs  mod.rs
src/lib/components/: AsciiProgress.svelte  MainPanel.svelte  Sidebar.svelte  TopBar.svelte
src/lib/components/devtools/: DevToolsView.svelte
src/lib/components/files/: FileListView.svelte
src/lib/components/inspector/: Inspector.svelte
src/lib/components/search/: SearchBar.svelte
src/lib/components/viz/: SunburstView.svelte  TreemapView.svelte
src/lib/ipc/: commands.ts  events.ts
src/lib/store/: duplicatesDismissStore.svelte.ts  filterStore.svelte.ts  filterStore.ts  scanStore.svelte.ts  scanStore.ts  selectionStore.svelte.ts  selectionStore.ts  uiStore.svelte.ts  uiStore.ts
src/lib/utils/: format.ts
src/views/: DuplicatesView.svelte  FileTypesView.svelte  LargeFilesView.svelte  TrashView.svelte
