[package]
name = "enso"
version = "0.1.0"
edition = "2021"

[lib]
name = "enso_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "enso"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri               = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell  = "2"

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

jwalk       = "0.8"
rayon       = "1"
dashmap     = "6"
smallvec    = { version = "1", features = ["union"] }
crossbeam-channel = "0.5"
num_cpus    = "1"
parking_lot = "0.12"

tokio       = { version = "1", features = ["full"] }
anyhow      = "1"
thiserror   = "2"
chrono      = "0.4"
nix         = { version = "0.29", features = ["fs"] }
libc        = "0.2"
trash       = "5"

[profile.release]
opt-level  = 3
lto        = true
codegen-units = 1
strip      = true
